# Opencollab-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  pyproject.toml.save
src/opencollab_mcp/: __init__.py  __main__.py  github_client.py  server.py
