[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencollab-mcp"
version = "0.1.0"
description = "AI-powered open source contribution matchmaker — finds perfect 'good first issues' matched to YOUR skills"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Prakhar Pandey", email = "prakhar9999pandey@gmail.com" },
]
keywords = ["mcp", "open-source", "github", "contributions", "ai", "good-first-issue"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
opencollab-mcp = "opencollab_mcp.server:main"

[project.urls]
Homepage = "https://github.com/prakhar1605/Opencollab-mcp"
Repository = "https://github.com/prakhar1605/Opencollab-mcp"
Issues = "https://github.com/prakhar1605/Opencollab-mcp/issues"
